--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="script.js"></script>
-    <link href="styles.css" rel="stylesheet" />
+    <link defer href="styles.css" rel="stylesheet" />
     <title>Document</title>
 </head>
 
