inspiration words addition

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <div class="hand second-hand"></div>
         </div>
     </div>
+    <div class="words">word</div>
 </body>
 
 </html>
