random words being chosen

--- a/index.html
+++ b/index.html
@@ -5,19 +5,20 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="script.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <link defer href="styles.css" rel="stylesheet" />
     <title>Document</title>
 </head>
 
 <body>
     <div class="clock">
+        <div class="words"></div>
         <div class="clock-face">
             <div class="hand hour-hand"></div>
             <div class="hand minute-hand"></div>
             <div class="hand second-hand"></div>
         </div>
     </div>
-    <div class="words">word</div>
 </body>
 
 </html>
